2007-04-03  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.
		- (real_act_stage6_post_ip_start): only add a route to the anycast IP
			address, not to its whole subnet

2007-04-01  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (aipd_monitor_start): up timeout to 20 seconds; apparently takes more
			time to start up sometimes on the XO

2007-04-01  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManager.c
		- (fixup_hostname): add entry for local hostname to /etc/hosts too

2007-03-30  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Cleanup some timeouts and make sure GSourceFuncs return the right
			values

2007-03-30  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (real_act_stage6_post_ip_start): add static arp mapping for MPP anycast
			IP address to the anycast MAC address

2007-03-29  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManager.c
		- (fixup_hostname): set unique hostname to work around avahi bug
			where it dies when a hostname conflict is encountered
			*HACK*, goes away when avahi gets fixed

2007-03-27  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Implement mesh "discovery" and a two-pass attempt to connect to
			the mesh before giving up
		- Ensure that GSources are valid before using them

2007-03-27  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManagerSystem.c
		- Don't use invalid netlink handles; return error instead

2007-03-27  Dan Williams  <dcbw@redhat.com>

	* include/NetworkManager.h
		- Add a "post-ip" stage in activation that happens after an IP address
			has been configured.  Mesh bits will look for a mesh portal here,
			or it could be used to log in to a Wi-Fi portal or something.

	* src/nm-device.[ch]
		- Add the "post-ip" activation stage

	* src/nm-device-802-11-mesh-olpc.[ch]
		- Implement mesh portal (MPP) detection
		- Random channel on interface startup